# so-calendar

./: Cargo.toml  README.md
.sqlx/: query-075aafe976945c0c20d17b0197df2dff00a01121fef75b1249469f39e369c202.json  query-3a57520ed75cb546f5b0118322c3fe96282e9b13a25f101e19c59469fc0e5783.json  query-3c216e8442b8af33a304ecc03a84147370cb21bf1041360b669a67131b13fea5.json  query-55444d5780575c43edf6cc000904330c2ada8b98bf252dfd907f5f36c05988b4.json  query-56672162787fba733ac9435cf7b5f3a92fecec6759770f4deda650b58639a090.json  query-8696571420032ff994e8bb1e47fac2d1d82c219b77160b0ff41c265f04b123f0.json  query-8b7c42e3d2557ecaec8a2a1ed42546d8231558c32df5a0e84f60bf2882adb2dd.json  query-a86851298e9f3e418e883b97bf1e941ec41f05ef1b7ee2cda293983da5a10a7c.json  query-cab0fc8cc74b6021635e1a332754ca443f1ea412c5aa048f18d4687aae4af57d.json
migrations/: 20240529174658_create_accounts_table.sql  20240529191149_create_calendars_table.sql
src/: args.rs  configuration.rs  lib.rs  main.rs  tracing.rs  tui.rs
src/domain/: calendar.rs  events.rs  mod.rs
src/features/: list_accounts.rs  mod.rs  new_account.rs  oauth_http_client.rs
src/features/account_overview/: list_accounts.rs  mod.rs  retrieve_accounts.rs  view.rs
src/features/days_view/: days_view_state.rs  deserialise_event_response.rs  handle_days_view_message.rs  mod.rs  retrieve_calendars.rs  view.rs
src/features/fetch_events/: deserialise_event_response.rs  fetch_events.rs  mod.rs
src/features/manage_connections/: manage_connections_state.rs  manage_connections_view.rs  mod.rs  retrieve_accounts.rs  retrieve_calendars.rs  update_manage_connections.rs
src/features/month_overview/: view.rs
src/features/month_view/: mod.rs  view.rs
src/features/new_account/: account_signin_task.rs  handle_event.rs  handle_new_account.rs  mod.rs  populate_new_calendars.rs  store_account.rs  tcp_request_handler.rs  view.rs  (+1 more)
src/tui/: handle_event.rs  mod.rs  model.rs  task_manager.rs  update.rs  util.rs  view.rs
src/util/: calendar_helpers.rs  mod.rs  text_helpers.rs
tests/: list_accounts.rs  new_account.rs
tests/features/: main.rs  manage_connections.rs
(+6 files in other folders)
