[package]
name = "socal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "socal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
copypasta = "0.10.1"
crossterm = "0.27.0"
dirs-next = "2.0.0"
httparse = "1.8.0"
oauth2 = "4.4.2"
open = "5.1.2"
ratatui = "0.26.2"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
rusqlite = "0.31.0"
serde = { version = "1.0.200", features = ["derive"] }
url = "2.5.0"
