[package]
name = "socal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "socal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
copypasta = "0.10.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs-next = "2.0.0"
eyre = "0.6.12"
httparse = "1.8.0"
oauth2 = "4.4.2"
open = "5.1.2"
ratatui = "0.26.3"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tokio-utils = "0.1.2"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
